--- a/less/main.less
+++ b/less/main.less
@@ -4,14 +4,13 @@
     justify-content: center;
     align-content: center;
     text-align: center;
-    margin: 0 2%;
+    margin: 0 1%;
     .needAToolBtn {
         display:flex;
         justify-content: center;
         white-space: nowrap;
         background-color: @dullorange;
         color:@black;
-        margin-right:.5%;
         border-left: 1px solid @dullorange;
         border-bottom-left-radius:20px;
         border-top-left-radius:20px;
@@ -28,7 +27,6 @@
         white-space: nowrap;
         background-color: @dullorange;
         color:@black;
-        margin-right:.5%;
         border-left: 1px solid @dullorange;
         border-bottom-right-radius:20px;
         border-top-right-radius:20px;
@@ -45,7 +43,7 @@
         flex-direction: column;
         padding:2%;
         background:rgba(255, 165, 0, .4);
-            border-bottom-right-radius: 40px;
+        border-bottom-right-radius: 40px;
         a{
             .btn-creator(@black, 20%, @dullorange, 2%);  
             }
@@ -53,7 +51,17 @@
         .workHardimg img{
             border:0px solid @dullorange;
             border-radius:100%;
+        }
+        h2 {
+                font-size:1.4rem;
             }
+        h3{ 
+                font-size:1.2rem;
+                font-style: italic;
+            } 
+        p   {
+                font-size:1.1rem;
+            }   
     .needAToolDesc {
             display:flex;
             flex-direction: column;
@@ -63,13 +71,21 @@
             a{
                 .btn-creator(@black, 15%, @dullorange, 2%);  
             }    
-            .toolneededimg img{
-                border:0px solid @dullorange;
-                border-radius:100%;
-                }    
+    .toolneededimg img{
+            border:0px solid @dullorange;
+            border-radius:100%;   
+            h2{
+                font-size:1.4rem;
+                }
+            h3{
+                font-size:1.2rem;
+                font-style: italic;
+                } 
+            p{
+                    font-size:1.1rem;
+            }   
     }
-
-        
+       
 }
 
 .mainCntnt{
